# internal/models/user.go
@@ -1,9 +1,12 @@
-package userservice
+package models
 
-import "gorm.io/gorm"
+import (
+	"gorm.io/gorm"
+)
 
 type User struct {
 	gorm.Model
 	Email    string `json:"email"`
 	Password string `json:"password"`
+	Tasks    []Task `gorm:"foreignKey:user_id"`
 }
